# agent-tools

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  agent_context_sync.config.example.json  codex_project_memory.py  install.sh  migrate_codex_provider_bucket.py  pack.sh  sync_agent_context.py  sync_agent_context_cron.sh
docs/: AGENT_MEMORY_SYNC.md  AUTODL_AI_TOOLS_BOOTSTRAP.md  CLAUDE_TO_CODEX_MEMORY_MIGRATION.md  CLI_SERVER_BOOTSTRAP.md  CODEX_APP_FAST_MODE_MACOS_GUIDE.md  CODEX_AUTOREVIEW_DEFAULT.md  CODEX_DESKTOP_CONNECTION_FAST_MODE_PATCH.md  CODEX_PLAYWRIGHT_TOOLS.md  CODEX_PROJECT_MEMORY.md  CODEX_REMOTE_CONTROL.md  CODEX_SQLITE_LOG_GUARD.md  CODEX_WSL2_PROXY.md
experiment_registry/: BRANCH_MANAGEMENT.md  CLAUDE_EXPERIMENT_REGISTRY.md  README.md  deploy_to_global_paths.sh  import_dpo.py  import_verl.py  install_registry_links.sh  registry_cli.py  registry_core.py  schema.sql  validate_expansion.py  validate_imports.py  validate_registry_install.sh
experiment_registry/queries/: best_bcb_model.sql  (+4 more)
goal_plan/runtime/: pyproject.toml
goal_plan/runtime/src/goal_plan_runtime/: __init__.py  cli.py
goal_plan/runtime/src/goal_plan_runtime/templates/: acceptance.md  plan.md  reviewer_prompt.md
goal_plan/runtime/tests/: test_runtime.py
scripts/: bootstrap_autodl_ai_tools.sh  configure_codex_app_fast_mode.py  configure_codex_sqlite_log_guard.py  configure_codex_win11_subscription.py  install-win11.ps1  patch_codex_desktop_connection_fast_mode.py  restart-codex-manual-remote.ps1  setup_codex_desktop_connection_fast_mode.py  verify_codex_fast_mode_runtime.py
(+14 files in other folders)
