[project]
name = "goal-plan-runtime"
version = "0.2.0"
description = "Project-language-independent runtime contracts and validators for goal-plan"
requires-python = ">=3.11"
dependencies = []

[project.scripts]
goal-plan-runtime = "goal_plan_runtime.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/goal_plan_runtime"]
